--- a/src/app/search/search/search.component.css
+++ b/src/app/search/search/search.component.css
@@ -46,3 +46,34 @@
 .mat-tab-group {
     margin-bottom: 48px;
 }
+
+h4 {
+    cursor: pointer;
+}
+
+ul li {
+    cursor: pointer;
+}
+
+.search-content {
+    justify-content: center;
+    align-items: center;
+}
+
+.search {
+    width: 80%;
+    margin: 0px 20px 0px 20px;
+    border: none;
+    padding: 10px;
+    border-bottom: 1px solid rgb(226, 222, 222);
+    border-radius: 20px;
+}
+
+.search i {
+    font-size: xx-large;
+    color: black;
+}
+
+.filter__item {
+    border-top: none;
+}
